--- a/WebAppCRUD/appsettings.json
+++ b/WebAppCRUD/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=ContactsDb;User=root;Password=unlock;"
+    "DefaultConnection": "Server=localhost;Database=ContactsDb;User=root;Password=root;"
   }
 }
